--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 #url: 'https://ryzalyusoff.com'
-url: "https://ryzalyusoff.github.io/ryzalyusoff.com"
+url: "https://ryzalyusoff.github.io"
+baseurl: "/ryzalyusoff.com"
 name: ryzalyusoff
 title: Ryzal Yusoff
 description: >- # this means to ignore newlines until "baseurl:"
   Founder readermode.io
-#baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ryzalyusoff
 github_username:  ryzalyusoff
 
